coloquei perguntas e respostas no mesmo arquivo

--- a/S02_A01.ipynb
+++ b/S02_A01.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1**"
+    "1 - Conversão de graus Celsius para Fahrenheit – Crie um programa que converta graus\n",
+    "Celsius em Fahrenheit. A fórmula é a seguinte:\n",
+    "```\n",
+    "F = 9\n",
+    "    — C + 32\n",
+    "    5\n",
+    "```\n",
+    "O programa deve solicitar ao usuário que insira uma temperatura em graus Celsius e, em\n",
+    "seguida, exiba a temperatura convertida em Fahrenheit. Após construir esse programa,\n",
+    "modifique-o para que converta graus Fahrenheit em graus Celsius."
    ]
   },
   {
@@ -48,7 +57,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2**"
+    "2 - Escreva um programa que receba um número e escreva “Par” caso esse número seja par\n",
+    "e escreva “Impar” caso esse número seja impar."
    ]
   },
   {
@@ -69,7 +79,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3**"
+    "3 - Escreva um programa que receba dois números, exiba as opções:\n",
+    "- adição\n",
+    "- subtração\n",
+    "\n",
+    "Então peça ao usuário para escolher uma das opções. Caso escolha a opção 1 o programa\n",
+    "deve realizar a soma dos dois números lidos e exibir. Caso escolha a opção 2 o programa\n",
+    "deve realizar a subtração dos dois números lidos e exibir."
    ]
   },
   {
@@ -93,7 +109,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4**"
+    "4 - Numa determinada escola, os critérios de aprovação são os seguintes:\n",
+    "- O aluno deve ter, no máximo, 25% de faltas;\n",
+    "- A nota final deve ser igual ou superior a 7,00.\n",
+    "\n",
+    "Construa um programa para ler as notas que um aluno tirou nos 4 bimestres, o número total\n",
+    "de aulas e o número de faltas, mostrando ao final a situação do aluno como sendo\n",
+    "“Aprovado”, “Reprovado por Faltas” e “Reprovado por média”, considerando que a\n",
+    "reprovação por faltas se sobrepõe a reprovação por nota."
    ]
   },
   {
@@ -124,7 +147,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5**"
+    "5 - Após construir o programa anterior, crie mais duas versões dele para prever as seguintes\n",
+    "situações:\n",
+    "- Um aluno pode ficar em recuperação se possuir frequência suficiente (superior a\n",
+    "75%) e média superior a 5 mas inferior a 7;\n",
+    "- Caso um aluno reprove por média e faltas, sua situação deve ser “Reprovado por\n",
+    "Média e Faltas” (ao invés de simplesmente “Reprovado por Faltas” como antes)."
    ]
   },
   {
@@ -183,7 +211,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6**"
+    "6 - Escreva um programa que peça ao usuário para fornecer um dia, mês e o ano arbitrários\n",
+    "e determine se esses dados correspondem a uma data válida. Não deixe de considerar que\n",
+    "existem meses com 30 e 31 dias, e que fevereiro pode ter 28 ou 29 dias, dependendo se o\n",
+    "ano for bissexto. Considere que um ano é bissexto quando for divisível por 4."
    ]
   },
   {
@@ -212,7 +243,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**7**"
+    "7 - Construa um programa que leia uma data qualquer (dia, mês e ano) e calcule a data do\n",
+    "próximo dia. Lembre-se que em anos bissextos o mês de fevereiro tem 29 dias. Lembre-se\n",
+    "que um ano é bissexto quando for divisível por 4."
    ]
   },
   {
@@ -253,7 +286,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**8**"
+    "8 - Faça um programa que leia as duas notas parciais obtidas por um aluno numa\n",
+    "disciplina ao longo de um semestre, e calcule a sua média. A atribuição de conceitos\n",
+    "obedece à tabela abaixo:\n",
+    "\n",
+    "Média de Aproveitamento\n",
+    "- Entre 9.0 e 10.0 Conceito - A\n",
+    "- Entre 7.5 e 8.9 - B\n",
+    "- Entre 6.0 e 7.4 - C\n",
+    "- Entre 4.0 e 5.9 - D\n",
+    "- Entre 0 e 3.9 - E\n",
+    "\n",
+    "O programa deve mostrar na tela as notas, a média, o conceito correspondente e a\n",
+    "mensagem:\n",
+    "\n",
+    "APROVADO se o conceito for A, B ou C.\n",
+    "\n",
+    "REPROVADO se o conceito for D ou E."
    ]
   },
   {
@@ -292,7 +341,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**9**"
+    "9 - As Organizações XTC resolveram dar um aumento de salário aos seus colaboradores e\n",
+    "lhe contrataram para desenvolver o programa que calcula os reajustes. Faça um programa\n",
+    "que recebe o salário de um colaborador e o reajuste segundo o seguinte critério, baseado\n",
+    "no salário atual:\n",
+    "- salários até R$ 280,00 (incluindo): aumento de 20%\n",
+    "- salários entre R$ 280,00 e R$ 700,00: aumento de 15%\n",
+    "- salários entre R$ 700,00 e R$ 1500,00: aumento de 10%\n",
+    "- salários de R$ 1500,00 em diante: aumento de 5%\n",
+    "\n",
+    "Após o aumento ser realizado informe na tela:\n",
+    "- o salário antes do reajuste;\n",
+    "- o percentual de aumento aplicado;\n",
+    "- o valor do aumento;\n",
+    "- o novo salário, após o aumento"
    ]
   },
   {
