adicionando atividade prática de joins e plots

--- a/exercicios/python_I/s05_atividade_funcoes_e_manipulacao_de_arquivos.ipynb
+++ b/exercicios/python_I/s05_atividade_funcoes_e_manipulacao_de_arquivos.ipynb
@@ -329,7 +329,7 @@
         "\n",
         "    return dados\n",
         "\n",
-        "dados = ler_arquivo_csv('compras.csv')\n",
+        "dados = ler_arquivo_csv('../../dados_exercicios/compras.csv')\n",
         "pprint.pprint(dados)\n"
       ]
     },
@@ -617,7 +617,7 @@
         "    print(f'A opção de débito é mais utilizada pelos homens!')\n",
         "else:\n",
         "    print(f'A opção de débito é mais utilizada pelas mulheres!')\n",
-        "    "
+        "   "
       ]
     },
     {
