--- a/exercicios/python_II/at02_plot_e_manipulacao_dados_pandas.ipynb
+++ b/exercicios/python_II/at02_plot_e_manipulacao_dados_pandas.ipynb
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -168,7 +168,7 @@
               "4      0.04       0.0         0.01          0.77  "
             ]
           },
-          "execution_count": 3,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -178,14 +178,14 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "df_vgsales = pd.read_csv('vgsales.csv')\n",
+        "df_vgsales = pd.read_csv('../../dados_exercicios/vgsales.csv')\n",
         "\n",
         "df_vgsales.head()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -255,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -264,7 +264,7 @@
               "0"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -284,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -296,7 +296,7 @@
               "       2013, 2014, 2015, 2016], dtype=int64)"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -307,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -371,7 +371,7 @@
               "11183     14.97      4.94      0.24         1.67         21.82  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "EFe-4pq8NGRf"
       },
@@ -495,7 +495,7 @@
               "331        308.02  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -517,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -568,7 +568,7 @@
               "246  Nintendo    382.83    278.03    224.54        72.82        958.43"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -582,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -1120,7 +1120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -1152,7 +1152,7 @@
         "plt.xticks(range(df_vendas_n64['Year'].min(), df_vendas_ps4['Year'].max() + 1), fontsize=10, rotation=15, color=\"black\")\n",
         "plt.yticks(fontsize=10, color=\"black\")\n",
         "plt.legend(loc='upper left', fontsize=12)\n",
-        "plt.grid(which = 'major', color = 'grey')         \n",
+        "plt.grid(which='major', color='grey')         \n",
         "plt.tight_layout()\n",
         "plt.show()\n"
       ]
@@ -1168,7 +1168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 22,
       "metadata": {
         "id": "M85a5qNt3E2y"
       },
@@ -1237,7 +1237,7 @@
               "4   Platform        829.15"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1250,7 +1250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -1297,21 +1297,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "df_livros = pd.read_csv('livros.csv')\n",
-        "df_livros_genero = pd.read_csv('livros_genero.csv')\n",
-        "df_livros_classicos = pd.read_csv('livros_classicos.csv')\n"
+        "df_livros = pd.read_csv('../../dados_exercicios/livros.csv')\n",
+        "df_livros_genero = pd.read_csv('../../dados_exercicios/livros_genero.csv')\n",
+        "df_livros_classicos = pd.read_csv('../../dados_exercicios/livros_classicos.csv')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 26,
       "metadata": {
         "id": "EK9X8wTZ3UdS"
       },
@@ -1338,7 +1338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -1363,7 +1363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -1397,7 +1397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 29,
       "metadata": {
         "id": "7dx7zW7M3Wau"
       },
@@ -1526,7 +1526,7 @@
               "10       NaN      NaN   Romance   Pedro"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1548,7 +1548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 30,
       "metadata": {
         "id": "imgwaOGk3YNq"
       },
@@ -1597,7 +1597,7 @@
               "10  NaN      NaN  Romance  Pedro"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1619,7 +1619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 31,
       "metadata": {
         "id": "YZFVy7UM3aPC"
       },
@@ -1828,7 +1828,7 @@
               "9   livro 10      NaN       NaN    Clara"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1850,7 +1850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 32,
       "metadata": {
         "id": "h3QVJcJIASt6"
       },
@@ -2015,7 +2015,7 @@
               "20  livro 10    Clara"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2037,7 +2037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 33,
       "metadata": {
         "id": "DvoUyayZAU-W"
       },
@@ -2205,7 +2205,7 @@
               "  9   livro 10    Clara"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2228,7 +2228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 34,
       "metadata": {
         "id": "XVEyWLV0AXP7"
       },
@@ -2396,7 +2396,7 @@
               "          9   livro 10    Clara"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2419,7 +2419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 35,
       "metadata": {
         "id": "MCFG5i38AZIf"
       },
@@ -2451,7 +2451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -2661,7 +2661,7 @@
               "          9        livro 10  Não Informado  Não Informado    Clara"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
