--- a/exercicios/python_II/at01_analise_dados_pandas.ipynb
+++ b/exercicios/python_II/at01_analise_dados_pandas.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -119,7 +119,7 @@
               "4  11     1     47    8               9    150  1.690631"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -128,14 +128,14 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "df_ibge = pd.read_csv('dados_ibge.csv')\n",
+        "df_ibge = pd.read_csv('../../dados_exercicios/dados_ibge.csv')\n",
         "\n",
         "df_ibge.head()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -247,7 +247,7 @@
               "4   Mais de 65 Anos                   3646"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "6X6M5T7EMb-G"
       },
@@ -381,7 +381,7 @@
               "4  11     1     47    8               9    150  1.690631  36 a 50 Anos"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -392,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -402,7 +402,7 @@
               "      dtype=int64)"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -413,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -423,7 +423,7 @@
               "      dtype=int64)"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -454,14 +454,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\EVERTON\\AppData\\Local\\Temp\\ipykernel_8580\\1819333857.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+            "C:\\Users\\EVERTON\\AppData\\Local\\Temp\\ipykernel_9748\\1819333857.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
             "  df_media_escolaridade_por_faixa_etaria = df_sem_registros_de_anos_nao_determinados.groupby(\n"
           ]
         },
@@ -529,7 +529,7 @@
               "4   Mais de 65 Anos                 4.833105"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -556,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -566,7 +566,7 @@
               "       32, 33, 35, 41, 42, 43, 50, 51, 52, 53], dtype=int64)"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -577,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -680,7 +680,7 @@
               "4  Rondônia     1     47    8               8    150  1.690631  36 a 50 Anos"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -721,7 +721,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -764,7 +764,7 @@
               "25            São Paulo  22539969"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -792,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -801,7 +801,7 @@
               "array([0, 1], dtype=int64)"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -821,7 +821,7 @@
               "array([8, 2, 4, 6, 0], dtype=int64)"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -832,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -942,7 +942,7 @@
               "4  36 a 50 Anos  "
             ]
           },
-          "execution_count": 15,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -967,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -1033,7 +1033,7 @@
               "3  Masculino   Preta  1603.861687"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1059,7 +1059,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "id": "yoT1FXJSzKwj"
       },
@@ -1068,7 +1068,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\EVERTON\\AppData\\Local\\Temp\\ipykernel_8580\\1710618172.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+            "C:\\Users\\EVERTON\\AppData\\Local\\Temp\\ipykernel_9748\\1710618172.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
             "  df_renda_media_por_faixa_etaria = df_ibge.groupby(['Faixa Etária'])['Renda'].mean().reset_index()\n"
           ]
         },
@@ -1136,7 +1136,7 @@
               "4   Mais de 65 Anos  1831.231487"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1165,7 +1165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {
         "id": "ZWpciLPN3Ckx"
       },
@@ -1174,7 +1174,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\EVERTON\\AppData\\Local\\Temp\\ipykernel_8580\\2872713848.py:6: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+            "C:\\Users\\EVERTON\\AppData\\Local\\Temp\\ipykernel_9748\\2872713848.py:6: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
             "  df_renda_media_por_anos_de_estudo = df_ibge.groupby(faixa_anos_de_estudo)['Renda'].mean().reset_index()\n"
           ]
         },
@@ -1242,7 +1242,7 @@
               "4      13 Anos ou Mais  4737.374037"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1271,7 +1271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1280,7 +1280,7 @@
               "array(['Parda', 'Branca', 'Preta', 'Amarela', 'Indígena'], dtype=object)"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1291,7 +1291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {
         "id": "M85a5qNt3E2y"
       },
@@ -1345,7 +1345,7 @@
               "1  Indígena  Masculino                 6.878906"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1371,7 +1371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {
         "id": "EK9X8wTZ3UdS"
       },
@@ -1422,7 +1422,7 @@
               "1   Preta                 7.864021"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1446,7 +1446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 21,
       "metadata": {
         "id": "7dx7zW7M3Wau"
       },
@@ -1503,7 +1503,7 @@
               "1  Feminino   Preta                 8.526480   1134.59640"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1532,7 +1532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -1591,7 +1591,7 @@
               "1  4241.954722  "
             ]
           },
-          "execution_count": 23,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1626,7 +1626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -1678,7 +1678,7 @@
               "1  Masculino                     Rondônia         1.705325"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
